<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".makanan">

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary"
        />

    <TextView
        android:id="@+id/title"
        android:textColor="@color/white"
        android:text="@string/menu_makanan"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:background="#F6F4F4"/>

    <TextView
        android:id="@+id/title1"
        android:textColor="@color/black"
        android:text="@string/makanan1"
        android:textStyle="bold"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="85dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/deskripsi"
        android:textColor="@color/black"
        android:text="@string/deskripsi1"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="115dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/time1"
        android:textColor="@color/black"
        android:text="@string/time"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="129dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/harga1"
        android:textColor="@color/black"
        android:text="@string/harga1"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="144dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageButton1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="71dp"
        android:layout_marginRight="70dp"
        app:srcCompat="@drawable/sotobetawi" />

    <View
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="179dp"
        android:background="#F6F4F4"/>

    <TextView
        android:id="@+id/title3"
        android:textColor="@color/black"
        android:text="@string/makanan2"
        android:textStyle="bold"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="195dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/deskrips2"
        android:textColor="@color/black"
        android:text="@string/deskripsi2"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="225dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/time2"
        android:textColor="@color/black"
        android:text="@string/time"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="239dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/harga2"
        android:textColor="@color/black"
        android:text="@string/harga1"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="254dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageButton2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="181dp"
        android:layout_marginRight="70dp"
        app:srcCompat="@drawable/gulaidaging" />

    <View
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="290dp"
        android:background="#F6F4F4"/>

    <TextView
        android:id="@+id/title4"
        android:textColor="@color/black"
        android:text="@string/makanan3"
        android:textStyle="bold"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="305dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/deskrips3"
        android:textColor="@color/black"
        android:text="@string/deskripsi3"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="335dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/harga3"
        android:textColor="@color/black"
        android:text="@string/harga1"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="362dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageButton3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="291dp"
        android:layout_marginRight="70dp"
        app:srcCompat="@drawable/rendang" />

    <View
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="400dp"
        android:background="#F6F4F4"/>

    <TextView
        android:id="@+id/title5"
        android:textColor="@color/black"
        android:text="@string/makanan4"
        android:textStyle="bold"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="415dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/deskripsi3"
        android:textColor="@color/black"
        android:text="@string/deskripsi4"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="445dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/time7"
        android:textColor="@color/black"
        android:text="@string/time2"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="459dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/harga5"
        android:textColor="@color/black"
        android:text="@string/harga2"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="474dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/time4"
        android:textColor="@color/black"
        android:text="@string/time"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="349dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageButton4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="401dp"
        app:srcCompat="@drawable/tahugejrot" />

    <View
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="510dp"
        android:background="#F6F4F4"/>

    <TextView
        android:id="@+id/title6"
        android:textColor="@color/black"
        android:text="@string/makanan5"
        android:textStyle="bold"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="525dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/deskripsi6"
        android:textColor="@color/black"
        android:text="@string/deskripsi5"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="555dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/time5"
        android:textColor="@color/black"
        android:text="@string/time"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="569dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/harga6"
        android:textColor="@color/black"
        android:text="@string/harga1"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="583dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageButton5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="511dp"
        app:srcCompat="@drawable/keraktelor" />
    <View
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="620dp"
        android:background="#F6F4F4"/>

    <TextView
        android:id="@+id/title7"
        android:textColor="@color/black"
        android:text="@string/makanan6"
        android:textStyle="bold"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="635dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/deskripsi7"
        android:textColor="@color/black"
        android:text="@string/deskripsi6"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="665dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/time6"
        android:textColor="@color/black"
        android:text="@string/time3"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="679.4dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/harga7"
        android:textColor="@color/black"
        android:text="@string/harga3"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="694.5dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageButton6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="621dp"
        app:srcCompat="@drawable/gadogado" />



</RelativeLayout>