<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cari">

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary"
        />

    <TextView
        android:id="@+id/title"
        android:textColor="@color/white"
        android:text="@string/search"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="40dp"
        android:iconifiedByDefault="false"
        android:queryHint="Gado"
        android:textStyle="bold" />


    <View
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="140dp"
        android:background="#F6F4F4"/>

    <TextView
        android:id="@+id/title7"
        android:textColor="@color/black"
        android:text="@string/makanan6"
        android:textStyle="bold"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="155dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/deskripsi7"
        android:textColor="@color/black"
        android:text="@string/deskripsi6"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="185dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/time6"
        android:textColor="@color/black"
        android:text="@string/time3"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="199.4dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/harga7"
        android:textColor="@color/black"
        android:text="@string/harga3"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="214.5dp"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageButton6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="141dp"
        app:srcCompat="@drawable/gadogado" />






</RelativeLayout>